--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <div class="wrapper">
       <div class="main__content">
         <img class="main__logo" src="images/logo.png" alt="Logo">
-        <h1 class="title title--white title--underline-white-left">MODERN AXURE TEMPLATE<br>FOR YOUR FUCKIN' BUSINESS</h1>
+        <h1 class="title main__title title--white title--underline-white-left">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
         <p class="main__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean<br>
           euismod bibendum laoreet. Proin gravida dolor sit amet lacus<br>
           accumsan et viverra justo commodo.</p>
         <a class="button button--white" href="#">Download</a>
       </div>
       <form class="form main__form" action="#">
-        <div class="form__title">Try Your <span class="form__free">FREE</span> Trial Today</div>
+        <div class="form__title">Try Your&nbsp<span class="form__free">FREE</span>&nbspTrial Today</div>
         <div class="form__inputs">
           <input class="form__item" type="text" placeholder="Name">
           <input class="form__item" type="email" placeholder="Email">
@@ -97,7 +97,7 @@
   </section>
   <section class="sublist-section">
     <div class="wrapper sublist-section__wrapper">
-      <div class="feature-image">Insert your<br>picture here</div>
+      <img class="sublist-section__img" src="images/image_left.png">
       <div class="text sublist-section__text">
         <h2 class="small-title title--underline-orange-left">Sub list section</h2>
         <p class="description sublist-section__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
@@ -138,7 +138,7 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
           bibendum laoreet.</p>
       </div>
-      <div class="feature-image picture-section__img">Insert your<br>picture here</div>
+      <img class="picture-section__img" src="images/image_right.png">
     </div>
   </section>
   <section class="awesome">
@@ -243,8 +243,8 @@
               accusamus expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.</p>
           </div>
           <div class="reviews__customer">
-            <div class="reviews__customer-photo"></div>
-            <p class="reviews__customer-name">Jeremy H.</p>
+            <img class="reviews__customer-photo" src="images/knoxville.png">
+            <p class="reviews__customer-name">J.Knoxville</p>
             <p class="description reviews__customer-present-position">Manager</p>
           </div>
         </div>
@@ -254,8 +254,8 @@
               accusamus expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.</p>
           </div>
           <div class="reviews__customer">
-            <div class="reviews__customer-photo"></div>
-            <p class="reviews__customer-name">John S.</p>
+            <img class="reviews__customer-photo" src="images/pontius.png">
+            <p class="reviews__customer-name">C.Pontius</p>
             <p class="description reviews__customer-present-position">Freelancer</p>
           </div>
         </div>
@@ -265,8 +265,8 @@
               accusamus expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.</p>
           </div>
           <div class="reviews__customer">
-            <div class="reviews__customer-photo"></div>
-            <p class="reviews__customer-name">Susan W.</p>
+            <img class="reviews__customer-photo" src="images/margera.png">
+            <p class="reviews__customer-name">B.Margera</p>
             <p class="description reviews__customer-present-position">Manager</p>
           </div>
         </div>
