--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- убрать фантомные пробелы -->
-<!-- добавить метатеги -->
 <!DOCTYPE html>
 <html lang="zxx">
 
@@ -8,19 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Axit</title>
   <link rel="shortcut icon" href="images/favicon.ico">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/fonts.css">
-  <link rel="stylesheet" href="css/iconsfont.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header class="header">
-    <div class="wrapper header__wrapper">
+    <div class="container header__container">
       <a href="#">
         <img class="header__logo" src="images/logo.webp" alt="Logo">
       </a>
-      <nav class="menu">
+      <nav class=" header__menu menu">
         <ul class="menu__list">
           <li class="menu__item"><a class="menu__link" href="#features">Features</a></li>
           <li class="menu__item"><a class="menu__link" href="#about">About</a></li>
@@ -32,10 +27,13 @@
     </div>
   </header>
   <main class="main">
-    <section class="cover">
-      <div class="wrapper">
+    <section class="cover ibg">
+      <img src="images/header_panel.webp" alt="">
+      <div class="container">
         <div class="cover__content">
-          <img class="cover__logo" src="images/logo.webp" alt="Logo">
+          <div class="cover__logo ibg">
+            <img src="images/logo.webp" alt="Logo">
+          </div>
           <h1 class="title cover__title title--white title--underline-white-left">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
           <p class="cover__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean<br>
             euismod bibendum laoreet. Proin gravida dolor sit amet lacus<br>
@@ -44,7 +42,7 @@
         </div>
         <form class="form cover__form" action="#">
           <div class="form__title">Try Your&nbsp;<span class="form__free">FREE</span>&nbsp;Trial Today</div>
-          <div class="form__inputs">
+          <div class="form__body">
             <input class="form__item" type="text" placeholder="Name">
             <input class="form__item" type="email" placeholder="Email">
             <input class="form__item" type="password" placeholder="Password">
@@ -54,9 +52,9 @@
       </div>
     </section>
     <section class="social">
-      <div class="wrapper social__wrapper">
+      <div class="container social__container">
         <div class="text social__text">
-          <h2 class="small-title social__small-title">Social Media</h2>
+          <h2 class="subtitle social__subtitle">Social Media</h2>
           <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
             Aenean euismod bibendum laoreet.</p>
         </div>
@@ -86,31 +84,49 @@
       </div>
     </section>
     <a id="features"></a>
-    <section class="tabs-block">
-      <div class="wrapper">
-        <div class="tabs">
-          <div class="tabs__item tabs__item--active">TAB 1</div>
-          <div class="tabs__item">TAB 2</div>
-          <div class="tabs__item">TAB 3</div>
+    <section class="tabs">
+      <div class="container">
+        <div class="tabs-triggers">
+          <a class="tabs-triggers__item" href="#tab-1">TAB 1</a>
+          <a class="tabs-triggers__item" href="#tab-2">TAB 2</a>
+          <a class="tabs-triggers__item" href="#tab-3">TAB 3</a>
         </div>
-        <div class="text tabs-block__text">
-          <h2 class="small-title tabs-block__small-title">Tabs with soft transitioning effect.</h2>
-          <p class="description tabs-block__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+        <div class="tabs-content">
+          <h2 class="subtitle tabs__subtitle">Tabs with soft transitioning effect.</h2>
+          <p class="description tabs-content__item" id="tab-1">Lorem first tab ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
             bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
             justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
             penatibus et magnis dis parturient montes.<br><br>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
-            bibendum laoreet.</p>
-          <button class="btn tabs-block__btn btn--orange">Download</button>
+            bibendum laoreet.
+          </p>
+          <p class="description tabs-content__item" id="tab-2">Lorem second tab ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+            bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+            justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+            penatibus et magnis dis parturient montes. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+            bibendum laoreet. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes.
+          </p>
+          <p class="description tabs-content__item" id="tab-3">Lorem third tab ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+            bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+            justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+            penatibus et magnis dis parturient montes.<br><br>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+            bibendum laoreet.
+          </p>
+          <button class="btn tabs__btn btn--orange">Download</button>
         </div>
-        <img class="tabs-block__img" src="images/image_city.webp" alt="city">
+        <div class="tabs__img ibg">
+          <img src="images/image_city.webp" alt="city">
+        </div>
       </div>
     </section>
     <section class="sublist-section">
-      <div class="wrapper sublist-section__wrapper">
-        <img class="sublist-section__img" src="images/image_left.webp" alt="image">
+      <div class="container sublist-section__container">
+        <div class="sublist-section__img ibg">
+          <img src="images/image_left.webp" alt="image">
+        </div>
         <div class="text sublist-section__text">
-          <h2 class="small-title title--underline-orange-left">Sub list section</h2>
+          <h2 class="subtitle title--underline-orange-left">Sub list section</h2>
           <p class="description sublist-section__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
             euismod bibendum laoreet. Proin gravida dolor sit amet lacus
             accumsan et viverra justo commodo.</p>
@@ -137,9 +153,9 @@
       </div>
     </section>
     <section class="picture-section">
-      <div class="wrapper">
+      <div class="container">
         <div class="text picture-section__text">
-          <h2 class="small-title title--underline-orange-left">Standard Picture Section</h2>
+          <h2 class="subtitle title--underline-orange-left">Standard Picture Section</h2>
           <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
             euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan
             et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis
@@ -149,12 +165,14 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
             bibendum laoreet.</p>
         </div>
-        <img class="picture-section__img" src="images/image_right.webp" alt="image">
+        <div class="picture-section__img ibg">
+          <img src="images/image_right.webp" alt="image">
+        </div>
       </div>
     </section>
     <a id="about"></a>
     <section class="awesome">
-      <div class="wrapper awesome__wrapper">
+      <div class="container awesome__container">
         <h2 class="title awesome__title title--underline-orange-center">WHY THIS IS AWESOME</h2>
         <p class="description awesome__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="awesome-items">
@@ -163,7 +181,7 @@
               <p class="awesome-items__circle-icon icon-lightbulb"></p>
             </div>
             <h3 class="awesome-items__subtitle">Thoughtful Design</h3>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing
+            <p class="description awesome-items__description">Lorem ipsum dolor sit amet, consectetur adipiscing
               elit. Aenean euismod bibendum laoreet. Proin gravida
               dolor sit amet lacus accumsan et viverra.</p>
           </div>
@@ -172,7 +190,7 @@
               <p class="awesome-items__circle-icon icon-keyboard"></p>
             </div>
             <h3 class="awesome-items__subtitle">Well Crafted</h3>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing
+            <p class="description awesome-items__description">Lorem ipsum dolor sit amet, consectetur adipiscing
               elit. Aenean euismod bibendum laoreet. Proin gravida
               dolor sit amet lacus accumsan et viverra.</p>
           </div>
@@ -181,7 +199,7 @@
               <p class="awesome-items__circle-icon icon-bolt"></p>
             </div>
             <h3 class="awesome-items__subtitle">Easy to Customize</h3>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing
+            <p class="description awesome-items__description">Lorem ipsum dolor sit amet, consectetur adipiscing
               elit. Aenean euismod bibendum laoreet. Proin gravida
               dolor sit amet lacus accumsan et viverra.</p>
           </div>
@@ -190,7 +208,7 @@
     </section>
     <a id="pricing"></a>
     <section class="pricing">
-      <div class="wrapper pricing__wrapper">
+      <div class="container pricing__container">
         <h2 class="title title--underline-orange-center">PRICING OPTIONS</h2>
         <p class="description pricing__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="pricing__items">
@@ -210,7 +228,7 @@
               <li class="pricing-item__feature">email support</li>
             </ul>
           </div>
-          <div class="pricing-item">
+          <div class="pricing-item pricing__professional">
             <div class="pricing-item__title">Professional</div>
             <div class="pricing-item__price">
               <p class="pricing-item__cost"><span class="pricing-item__dollar">$</span>19</p>
@@ -247,7 +265,7 @@
     </section>
     <a id="reviews"></a>
     <section class="reviews">
-      <div class="wrapper reviews__wrapper">
+      <div class="container reviews__container">
         <h2 class="title title--underline-orange-center">WHAT OUR CUSTOMERS ARE SAYING</h2>
         <p class="description reviews__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="reviews__items">
@@ -287,8 +305,9 @@
         </div>
       </div>
     </section>
-    <section class="additional">
-      <div class="wrapper additional__wrapper">
+    <section class="additional ibg">
+      <img src="images/custom_panel.webp" alt="">
+      <div class="container additional__container">
         <h2 class="title additional__title title--underline-white-center">STYLISH AXURE DESIGN</h2>
         <p class="additional__description">Use the sections you need, remove the ones you don't. Create gorgeous prototypes faster than ever!</p>
         <button class="btn btn--white">Download</button>
@@ -296,7 +315,7 @@
     </section>
     <a id="contact"></a>
     <section class="contacts">
-      <div class="wrapper contacts__wrapper">
+      <div class="container contacts__container">
         <h2 class="title title--underline-orange-center">CONTACT US</h2>
         <p class="description contacts__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <form action="#" class="form contacts__form">
@@ -312,7 +331,7 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="wrapper footer__wrapper">
+    <div class="container footer__container">
       <ul class="socials footer__link-list">
         <li class="socials__item">
           <a class="socials__link footer__list-item fab icon-facebook" href="https://facebook.com/"></a>
@@ -339,6 +358,7 @@
       <p class="footer__copyright">© 2015 Axure Themes</p>
     </div>
   </footer>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
